2013-08-31	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: SDL2 SetIcon looks correct now.  However the workaround is NOT optimal.  Seems like there's no way to get a paletted surface working right in SDL2... but I'm probably just missing it.

2013-08-31	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: SDL2 SetIcon fix (hopefully) for Windows.  Icon still looks as ugly as sin in Linux.

2013-08-30	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* imagewin/imagewin.cc: Applied Malignant Manor's fix for SDL2 window resizes.  Added NULL-check instead of using test variable.
	* gamemgr/bggame.cc, gamemgr/sigame.cc: Fixed text input for initial BG and SI game screen for SDL2
	* gumps/Gump_manager.cc: Fixed text input for save screens and such for SDL2
	* drag.cc: Fixed crash when dragging items for SDL2
	* audio/midi_drivers/LowLevelMidiDriver.cpp, audio/midi_drivers/LowLevelMidiDriver.h: Added a quit_thread flag -- really only used for SDL2

2013-08-28	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* exult.cc: Fixed SetIcon (mostly...) for SDL2 for non-OSX platforms
	* sdl-compat.h: Added SDL2 define for SDL_UpdateRect; Added SDL2_INITIAL_FILL for background color
	* imagewin/scale_point.cc: Removed many ifdefs for UpdateRect SDL2
	* imagewin/imagewin.cc: Fixed errors with creating windows, textures, and surfaces for SDL2 in some cases; Changed initial SDL2 color fill to SDL2_INITIAL_FILL

2013-08-27	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* sdl-compat.h, imagewin/imagewin.cc, imagewin/imagewin.h: Some SDL2 fixes ... no longer crashes EVERY time.  If you disable scaling entirely, it will actually show SOME output.

2013-08-26	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)