@@ -11,16 +11,29 @@ SRC=.
 
 ### Modify these paths
 SDL_CFLAGS:=-I$(SRC)/sdl/include
-### We want to do our own stdout/stderr redirection, thank you.
-#SDL_LIBS:=-L$(SRC)/sdl/lib -lSDLmain -lSDL
-SDL_LIBS:=-L$(SRC)/sdl/lib -lSDL -lwinmm
 
-SDL_IMAGE_LIBS=-L$(SRC)/sdl/lib -lmingw32 -lSDL_image -lSDL -lpng -ltiff -ljpeg -lwebp -lz
+ifdef SDL2
+	LIB_SDL=-lSDL2
+	LIB_SDL_IMAGE=-lSDL2_image
+	LIB_SDL_MAIN=-lSDL2main
+	SDL_DLL_NAME=SDL2.dll
+else
+	LIB_SDL=-lSDL2
+	LIB_SDL_MAIN=-lSDLmain
+	LIB_SDL_IMAGE=-lSDL_image
+	SDL_DLL_NAME=SDL.dll
+endif
+
+### We want to do our own stdout/stderr redirection, thank you.
+#SDL_LIBS:=-L$(SRC)/sdl/lib $(LIB_SDL_MAIN) $(LIB_SDL)
+SDL_LIBS:=-L$(SRC)/sdl/lib $(LIB_SDL) -lwinmm
+
+SDL_IMAGE_LIBS=-L$(SRC)/sdl/lib -lmingw32 $(LIB_SDL_IMAGE) $(LIB_SDL) -lpng -ltiff -ljpeg -lwebp -lz
 
 ### Uncomment these 2 lines, and comment out the 2 above if you want to build
 ### Exult as a console Win32 application. This is unsupported and is somewhat
 ### of a hack.
-#SDL_LIBS=-L$(SRC)/sdl/lib -lSDL -mconsole
+#SDL_LIBS=-L$(SRC)/sdl/lib $(LIB_SDL) -mconsole
 #SDL_CFLAGS=-I$(SRC)/sdl/include -DSDL_main=main
 
 ### Zip File support. Comment out if ZLib isn't installed
@@ -33,9 +46,9 @@ else
 endif
 
 ### OpenGL mode support
-OPENGL_LIBS:=-lopengl32
-OPENGL_OBJS:=shapes/glshape.o
-OPENGL_CFLAGS:=-DHAVE_OPENGL
+#OPENGL_LIBS:=-lopengl32
+#OPENGL_OBJS:=shapes/glshape.o
+#OPENGL_CFLAGS:=-DHAVE_OPENGL
 
 ### GTK+ libs and includes, for Exult Studio.
 # If this doesn't work, insert output of `pkg-config --cflags gtk+-win32-2.0` manually
@@ -246,7 +259,7 @@ install: $(EXEC)
 	cp data/exult_bg.flx $(U7PATH)/data
 	cp data/exult_si.flx $(U7PATH)/data
 	cp data/exultmsg.txt $(U7PATH)/data
-	cp SDL/lib/SDL.dll $(U7PATH)
+	cp SDL/lib/$(SDL_DLL_NAME) $(U7PATH)
 
 debug: $(EXEC)
 	mkdir -p $(U7PATH)
@@ -256,7 +269,7 @@ debug: $(EXEC)
 	cp data/exult_bg.flx $(U7PATH)/data
 	cp data/exult_si.flx $(U7PATH)/data
 	cp data/exultmsg.txt $(U7PATH)/data
-	cp SDL/lib/SDL.dll $(U7PATH)
+	cp SDL/lib/$(SDL_DLL_NAME) $(U7PATH)
 
 dist:   $(EXEC) exconfig.dll
 	mkdir -p $(U7PATH)
@@ -283,7 +296,7 @@ dist:   $(EXEC) exconfig.dll
 	cp data/bg/defaultkeys.txt $(U7PATH)/Exult/bgdefaultkeys.txt
 	cp data/si/defaultkeys.txt $(U7PATH)/Exult/sidefaultkeys.txt
 	cp SDL/README-SDL.txt $(U7PATH)/Exult
-	cp SDL/lib/SDL.dll $(U7PATH)/Exult
+	cp SDL/lib/$(SDL_DLL_NAME) $(U7PATH)/Exult
 	u2d $(U7PATH)/Exult/*.txt
 	strip exconfig.dll -o $(U7PATH)/exconfig.dll
 	cp win32/exult_installer.iss $(U7PATH)
@@ -316,7 +329,7 @@ toolsinstall: tools
 	cp libsmooth_randomize$(LIBEXT) $(U7PATH)/tools
 	cp libsmooth_smooth$(LIBEXT) $(U7PATH)/tools
 	cp libsmooth_stream$(LIBEXT) $(U7PATH)/tools
-	cp SDL/lib/SDL.dll $(U7PATH)/tools
+	cp SDL/lib/$(SDL_DLL_NAME) $(U7PATH)/tools
 
 toolsdist: tools
 	mkdir -p $(U7PATH)/Tools
@@ -357,7 +370,7 @@ toolsdist: tools
 	cp tools/u7siflag.txt $(U7PATH)/Tools/tools
 	cp tools/ucformat.txt $(U7PATH)/Tools/tools
 	u2d $(U7PATH)/Tools/tools/*.txt
-	cp SDL/lib/SDL.dll $(U7PATH)/Tools/tools
+	cp SDL/lib/$(SDL_DLL_NAME) $(U7PATH)/Tools/tools
 	cp win32/exult_tools_installer.iss $(U7PATH)
 
 studioclean:
